OxygenOS styled dismiss all button [1/2]
showing animation might glitch if previous hiding animation was canceled before it finished and set visibility of button to View.GONE
thats the reason why hiding animation is so short

Before someone will run saying its kang of @imjyotiraditya solution
I actually didn't know it was already done by him so i created my own solution
we both looked at oxygenos code to see how it was made so thats why our code is simillar

Signed-off-by: 00day0 <therandomuser11@gmail.com>

--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -204,4 +204,11 @@
 
     <color name="GM2_yellow_500">#FFFBBC04</color>
     <color name="GM2_green_500">#FF34A853</color>
+
+
+    <color name="volume_background_tint">#f2f2f2</color>
+
+    <color name="recents_dismiss_all_background_color">@android:color/white</color>
+    <color name="recents_dismiss_all_icon_color">#8a000000</color>
+
 </resources>
