Refresh QS drag handle look
Signed-off-by: 00day0 <therandomuser11@gmail.com>

--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -99,4 +99,6 @@
     <color name="brightness_slider_background">@android:color/black</color>
     <color name="brightness_slider_icons">@android:color/black</color>
 
+    <color name="qs_drag_handle_color">#66555555</color>
+
 </resources>
