Fluid brightness slider [1/3]
Signed-off-by: 00day0 <therandomuser11@gmail.com>

--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -20,7 +20,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/qs_footer"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/qs_footer_height"
+    android:layout_height="@*android:dimen/extra_qs_footer_height"
+    android:layout_marginStart="@dimen/qs_footer_margin"
+    android:layout_marginEnd="@dimen/qs_footer_margin"
     android:elevation="4dp"
     android:background="@android:color/transparent"
     android:baselineAligned="false"
@@ -28,13 +30,54 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
+    <FrameLayout
+        android:id="@+id/qs_brightness_slider_parent"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="-15dp"
+        android:layout_marginRight="-15dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        android:gravity="center" >
+
+        <SeekBar
+            android:id="@+id/qs_brightness_slider"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:progressDrawable="@drawable/brightness_seekbar"
+            android:thumb="@android:color/transparent"
+            android:paddingLeft="0px"
+            android:paddingRight="0px"
+            android:background="@null"/>
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical|left"
+            android:src="@drawable/brightness_left"
+            android:layout_marginLeft="30dp"
+            android:tint="@color/brightness_slider_icons"
+            android:scaleType="centerInside"/>
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical|right"
+            android:src="@drawable/brightness_right"
+            android:layout_marginRight="30dp"
+            android:tint="@color/brightness_slider_icons"
+            android:scaleType="centerInside"/>
+
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:gravity="end"
         android:layout_marginStart="@dimen/qs_footer_margin"
-        android:layout_marginEnd="@dimen/qs_footer_margin" >
+        android:layout_marginEnd="@dimen/qs_footer_margin"
+        android:layout_height="48dp"
+        android:layout_gravity="top"
+        android:gravity="end" >
 
         <com.android.keyguard.AlphaOptimizedLinearLayout
             android:id="@+id/qs_footer_actions_edit_container"
@@ -132,7 +175,7 @@
         android:id="@+id/qs_drag_handle_view"
         android:layout_width="24dp"
         android:layout_height="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@*android:dimen/qs_drag_handle_margin_bottom"
         android:layout_gravity="center_horizontal|bottom"
         android:background="@drawable/qs_footer_drag_handle" />
 
