--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -90,13 +90,13 @@
 
     <color name="ringer_icon_mute">@android:color/white</color>
 
-    <color name="brightness_slider_progress">#9B9B9D</color>
-    <color name="brightness_slider_background">@android:color/black</color>
-    <color name="brightness_slider_icons">@android:color/black</color>
-
     <color name="recents_dismiss_all_background_color">@color/volume_background_tint</color>
     <color name="recents_dismiss_all_icon_color">?android:attr/colorAccent</color>
 
     <color name="qs_tile_background_color_disabled">#0fffffff</color>
+
+    <color name="brightness_slider_progress">#9B9B9D</color>
+    <color name="brightness_slider_background">@android:color/black</color>
+    <color name="brightness_slider_icons">@android:color/white</color>
 
 </resources>
