--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -209,7 +209,6 @@
     <color name="GM2_yellow_500">#FFFBBC04</color>
     <color name="GM2_green_500">#FF34A853</color>
 
-
     <color name="volume_background_tint">#f2f2f2</color>
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
@@ -224,5 +223,9 @@
    <color name="row_icon_white">@android:color/white</color>
 
    <color name="qs_tile_background_color_disabled">@color/volume_background_tint</color>
+
+    <color name="brightness_slider_progress">#FFFFFF</color>
+    <color name="brightness_slider_background">#99FFFFFF</color>
+    <color name="brightness_slider_icons">#00FFFFFF</color>
 
 </resources>
