--- a/packages/SystemUI/res/drawable/brightness_seekbar.xml
+++ b/packages/SystemUI/res/drawable/brightness_seekbar.xml
@@ -20,7 +20,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <corners android:radius="8dp"/>
+            <corners android:radius="?android:attr/dialogCornerRadius"/>
             <size android:height="42dp" />
             <solid android:color="@color/brightness_slider_background" />
         </shape>
@@ -32,7 +32,7 @@
                       android:drawable="@android:color/transparent" />
                 <item>
                     <shape android:shape="rectangle">
-                        <corners android:radius="8dp"/>
+                        <corners android:radius="?android:attr/dialogCornerRadius"/>
                         <size android:height="42dp" />
                         <solid android:color="@color/brightness_slider_seekbar" />
                         <stroke android:width="4dp"
