--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -225,7 +225,7 @@
    <color name="qs_tile_background_color_disabled">@color/volume_background_tint</color>
 
     <color name="brightness_slider_progress">#FFFFFF</color>
-    <color name="brightness_slider_background">#99FFFFFF</color>
-    <color name="brightness_slider_icons">#00FFFFFF</color>
+    <color name="brightness_slider_background">#FFFFFF</color>
+    <color name="brightness_slider_icons">#FFFFFF</color>
 
 </resources>
