--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -208,6 +208,9 @@
 
     <color name="GM2_yellow_500">#FFFBBC04</color>
     <color name="GM2_green_500">#FF34A853</color>
+    <color name="brightness_slider_background">#FFFFFF</color>
+    <color name="brightness_slider_progress">?android:attr/colorAccent</color>
+    <color name="brightness_slider_icons">?android:attr/colorAccent</color>
 
     <color name="volume_background_tint">#f2f2f2</color>
 
@@ -223,10 +226,6 @@
    <color name="row_icon_white">@android:color/white</color>
 
    <color name="qs_tile_background_color_disabled">@color/volume_background_tint</color>
-
-    <color name="brightness_slider_progress">#FFFFFF</color>
-    <color name="brightness_slider_background">#FFFFFF</color>
-    <color name="brightness_slider_icons">#FFFFFF</color>
 
     <color name="qs_drag_handle_color">#66e5e5e5</color>
 
