--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -213,7 +213,7 @@
     <color name="volume_background_tint">#f2f2f2</color>
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
-    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_light</color>
+    <color name="recents_dismiss_all_icon_color">?android:attr/colorAccent</color>
 
     <color name="ringer_icon_normal">#5c5c5c</color>
     <color name="ringer_bcg_normal">@color/volume_background_tint</color>
