--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -38,7 +38,7 @@
         android:layout_marginLeft="-15.5dp"
         android:layout_marginRight="-15.5dp"
         android:layout_marginBottom="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:gravity="center" >
 
         <SeekBar
