--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -91,7 +91,7 @@
     <color name="ringer_icon_mute">@android:color/white</color>
 
     <color name="recents_dismiss_all_background_color">@color/volume_background_tint</color>
-    <color name="recents_dismiss_all_icon_color">?android:attr/colorAccent</color>
+    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="qs_tile_background_color_disabled">#0fffffff</color>
 
