--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -96,6 +96,6 @@
     <color name="qs_tile_background_color_disabled">#0fffffff</color>
 
     <color name="brightness_slider_progress">?android:attr/colorAccent</color>
-    <color name="brightness_slider_background">@android:color/black</color>
+    <color name="brightness_slider_background">@*android:color/primary_dark_device_default_dark</color>
     <color name="brightness_slider_icons">?android:attr/colorAccent</color>
 </resources>
