--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -208,7 +208,7 @@
 
     <color name="GM2_yellow_500">#FFFBBC04</color>
     <color name="GM2_green_500">#FF34A853</color>
-    <color name="brightness_slider_background">#FFFFFF</color>
+    <color name="brightness_slider_background">@*android:color/background_device_default_light</color>
     <color name="brightness_slider_progress">?android:attr/colorAccent</color>
     <color name="brightness_slider_icons">?android:attr/colorAccent</color>
 
